--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,185 +1,168 @@
-html,body{
-  margin: 0;
+ :root {
+  --blue-gray: #627D98;
+  --light-gray: #F0F4F8;
+  --blue-gray-01: #D9E2EC;
+  --blue-gray-02: #BCCCDC;
+  --blue-gray-03: #9FB3C8;
+  --blue-gray-04: #829AB1;
+  --blue-gray-05: #627D98;
+  --blue-gray-06: #486581;
+  --blue-gray-07: #334E68;
+  --blue-gray-08: #243B53;
+  --blue-gray-09: #102A43;
 }
-
-.loginPage{
-  position: absolute;
-  top: 0;
-  left: 0; 
-  right: 0;
-  bottom: 0;
-  height: 100%;
-  width: 100%;
-  background-color: #2c346b;
-  padding-right: 0;
-  padding-left: 0;
-
+.navBar{
+  background-color: var(--blue-gray-07) !important;
 }
-.titles{
-  /* margin-left: 20%; */
-  margin-top: 10%;
-  text-align: center;
-}
-.title{
-  color:#e1f16b;
-  font-size: 9vh;
-}
-.subTitle{
-  color:#e1f16b;
-  margin-top: 1%;
-
-}
-
-.img{
-  margin-top: 15%;
-  text-align: center;
-  padding: 0;
-  background-color: #2c346b;
-}
-.image{
-  /* max-width: 100%;
-  height: auto;
-  width: auto; ie8 */
-  height: 80%;
-}
-.signInButton{
-  margin-right: 2%;
-  font-weight: bold;
-}
-.signInButton:hover{
-  background-color: #e1f16b !important;
-}
-.signUpButton{
-  margin-left:2%;
-  font-weight: bold;
-}
-.signUpButton:hover{
-  background-color: #e1f16b !important;
-}
-.signInForm{
-  background-color: rgba(255, 255, 255, 0.779);
-  border: solid;
-  padding: 15px;
-  border-radius: 10px;
-  /* text-align: center; */
-  width: 50%;
-  height:60%;
-}
-
-.loginTitle{
-  color:#2c346b;
-  text-align: center;
-}
-
-.formSub{
-  color: #2c346b !important;
-  text-decoration: none;
-}
-.formsubTitles{
-  text-align: center;
-}
-.emailSubText{
-  text-decoration: none;
-  display: inline-block;
-  color: #2c346b !important;
-  text-align: center;
-}
-.emailSubText:hover{
-  color:#ff8c00 !important;
-}
-
-.signUpHere{
-  margin-right: 0.5rem;
-}
-.emailInput{
-  margin-bottom: 5%;
-  margin-top: 1%;
-  border: none !important;
-  border-bottom: solid #2c346b !important;
-  border-radius: 0 !important;
-  width: 100%;
-  padding-left:0 !important;
-  padding-right:0 !important;
-
-  background-color: transparent !important;
-  outline: none;
-}
-.emailInput:hover{
-  border: none !important;
-  border-bottom: solid #2c346b !important;
-  border-radius: 0 !important;
-}
-.emailInput:focus{
-  box-shadow: none !important;
-  border-bottom: solid black !important;
-  /* background-color: white !important; */
-}
-.submitButtonContainer{
-  text-align: center;
-}
-.submitButton{
-  color: black;
-}
-.submitButton:hover{
-  background-color: green;
+.navBar a{
   color: white;
 }
-
-.myName{
-  margin-top: 1%;
-  font-style:italic;
-  color: aliceblue;
-  text-decoration: none;
-}
-.myName:hover{
-  color:#e1f16b;
-}
-.signup{
-  background-color: #b6ccd7;
-  height: 10vh;
-  margin-left: 10%;
-  margin-right: 10%;
-  border-radius: 15px;
-  margin-bottom: 7%;
+.navBar a:hover{
+  color: var(--blue-gray-02);
 }
 
-.image{
-  max-height: 40vh;
+.HomePage{
+  background-color: var(--blue-gray-09) !important;
 }
-.bgColor{
-  background-color: #2c346b;
-  height:100vh;
+.carouselRow{
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem !important;
 }
 .signInPage{
   display: flex;
-  /* justify-content: center; */
-  justify-content: space-around;
-  align-items: center;
+  justify-content: center;
+  background-color: var(--blue-gray-09);
+  height: calc(100vh - 78px);
 }
-.manage{
-  background-color: #f9b666;
-  height: 10vh;
-  margin-left: 10%;
-  margin-right: 10%;
+.signInContainer{
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  height: fit-content;
+  overflow-y: auto;
+  overflow-x: hidden;
+  margin-top: 3rem;
   border-radius: 15px;
+  padding: 1rem;
+  background-color: var(--light-gray);
 }
-.getMost{
-  background-color: antiquewhite;
-}
-.al{
+.signInHeader{
   text-align: center;
-  margin-right: 0;
+  font-size: 2rem;
+  color: var(--blue-gray-09)
 }
-.LinkButton{
-  border: none;
-  border-radius: 0.125rem;
-  padding:0.25rem;
+.buttonContainer{
+  position: relative;
+  top:5px;
+  left: calc(50% - 37.8px);
 }
-.LinkButton a{
+.submitButton{
+  background-color: var(--blue-gray-09) !important;
+}
+.submitButton:hover{
+  background-color: var(--blue-gray-07) !important;
+}
+.inputSignIn{
+  border: none !important;
+  padding-left: 0 !important;
+  background-color: transparent !important;
+  border-bottom: 2px solid var(--blue-gray-09) !important;
+  border-radius: 0 !important;
+}
+.inputSignIn:hover{
+  border: none !important;
+  border-bottom: 2px solid var(--blue-gray-09) !important;
+  border-radius: 0 !important;
+}
+.inputSignIn:focus{
+  box-shadow: none !important;
+  border-bottom: 2px solid var(--blue-gray-07) !important;
+}
+.forgotPasswordContainer{
+  text-align: center;
+  margin-bottom: 0.5rem;
+}
+.forgotPassword:hover{
+  color: var(--blue-gray-09) !important;
+  cursor: pointer;
+}
+.LandingPageE1{
+  height: 25rem;
+  text-align: center;
+  background-color: #F0F4F8;
+  padding: 1rem;
+  margin: 1rem;
+  border-radius: 15px;
+  color:#102A43
+}
+.LandingPageE1:hover{
+  cursor: pointer;
+}
+.LandingElementsButton{
+  margin-top: 1rem;
+  text-align: right;
+}
+.landingETitle{
+  color: var(--blue-gray-09);
+  margin-bottom: 1rem;
+}
+.LandingEBtn{
+  font-size: 1rem !important;
+  background-color: var(--blue-gray-09) !important;
+  color: var(--light-gray);
+  padding: 0.5rem;
+  border-radius: 6px;
+}
+.LandingEBtn:hover{
+  background-color: var(--blue-gray-07) !important;
+}
+.footer{
+  text-align: center;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  padding-right: 1rem;
+  padding-left: 1rem;
+  background-color: var(--blue-gray-07);
+  color: var(--light-gray);
+}
+.footer h1{
+  margin-top: -10px;
+  text-decoration: underline;
+  font-size: 3rem;
+}
+.footerSection{
+  margin-top: 1rem;
+}
+.footerCol{
+  margin: 0 1rem 2rem 1rem;
+}
+.footer a{
+  font-size: 1rem;
+  color: var(--light-gray);
   text-decoration: none;
-  color:#2c346b;
 }
-.LinkButton a:hover{
+.footer a:hover{
+  color: var(--blue-gray-02);
   text-decoration: none;
-  color:#2c346b;
+}
+.slogan{
+  display: block;
+  color:gold;
+}
+.copyRight{
+  display: block;
+}
+.footerLeft{
+  margin-top: 0.5rem;
+}
+.logo:hover{
+  cursor: pointer;
+}
+.errorAlert{
+  position: absolute;
+  z-index: 100;
+  margin:0 !important;
+  width: 100%;
+  text-align: center;
 }
