--- a/styles/globals.css
+++ b/styles/globals.css
@@ -111,17 +111,18 @@ option:hover {
   display: flex;
   justify-content: center;
   background-color: var(--blue-gray-09);
-  height: calc(100vh - 78px);
+  height: 100%;
+  min-height: 100vh;
 }
 .signInContainer {
   display: flex;
   flex-direction: column;
-  width: 60%;
+  width: 70%;
   height: fit-content;
   overflow-y: auto;
   overflow-x: hidden;
-  /* margin-top: 3rem; */
   margin-top: 15vh;
+  margin-bottom: 15vh;
   border-radius: 15px;
   padding: 1rem;
   background-color: var(--light-gray);
